# go-aspects

./: BUILD.bazel  MODULE.bazel  bazel-bin  bazel-go-aspects  bazel-out  bazel-testlogs  combine_packages.py  combined_packages_analysis.json  direct_output.json  external_packages_output.json  go.mod  go.sum  gopackages_analysis_output.json  gopackages_main_target.json  test_vta_direct.go
aspects/golang/common/: BUILD.bazel  merge_json_deps.go  utils.bzl  vta_analyzer_bazel.go  vta_analyzer_simple.go  vta_analyzer_tool.go
aspects/golang/provider/: endor_go_dependency_info.bzl
aspects/golang/version-0.35.0/: go_binary.bzl  go_library.bzl
aspects/golang/version-0.45.0/: go_binary.bzl  go_library.bzl
src/cache/: BUILD.bazel  redis.go
src/database/: BUILD.bazel  connection.go
src/main/: BUILD.bazel  main.go
src/utils/: BUILD.bazel  utils.go
src/web/: BUILD.bazel  server.go
