###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

module(
    name = "go-aspects",
    version = "",
)

bazel_dep(name = "rules_go", version = "0.57.0")
bazel_dep(name = "gazelle", version = "0.45.0")

go = use_extension("@rules_go//go:extensions.bzl", "go")
go.host()
# Use the host Go installation

# Commenting out go_deps temporarily to test gazelle without automatic dependency management
go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

# All *direct* Go dependencies of the module have to be listed explicitly.
use_repo(
    go_deps,
    "com_github_gin_gonic_gin",
    "com_github_go_redis_redis_v8", 
    "com_github_golang_jwt_jwt_v4",
    "com_github_google_uuid",
    "com_github_gorilla_mux",
    "com_github_prometheus_client_golang",
    "com_github_sirupsen_logrus",
    "org_golang_x_crypto",
    "org_golang_x_time",
    "org_golang_x_tools",
)