load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "cache",
    srcs = ["redis.go"],
    importpath = "github.com/example/go-aspects/src/cache",
    visibility = ["//visibility:public"],
    deps = [
        "//src/utils",
        "@com_github_go_redis_redis_v8//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
    ],
)
