load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "main_lib",
    srcs = ["main.go"],
    importpath = "github.com/example/go-aspects/src/main",
    visibility = ["//visibility:private"],
    deps = [
        "//src/utils",
        "@com_github_google_uuid//:go_default_library",
        "@com_github_gorilla_mux//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@org_golang_x_time//rate:go_default_library",
    ],
)

go_binary(
    name = "main",
    embed = [":main_lib"],
    visibility = ["//visibility:public"],
)
