load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "utils",
    srcs = ["utils.go"],
    importpath = "github.com/example/go-aspects/src/utils",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_google_uuid//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@org_golang_x_time//rate:go_default_library",
    ],
)
