load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "web",
    srcs = ["server.go"],
    importpath = "github.com/example/go-aspects/src/web",
    visibility = ["//visibility:public"],
    deps = [
        "//src/database",
        "//src/utils",
        "@com_github_gin_gonic_gin//:go_default_library",
        "@com_github_golang_jwt_jwt_v4//:go_default_library",
        "@com_github_prometheus_client_golang//prometheus:go_default_library",
        "@com_github_prometheus_client_golang//prometheus/promhttp:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@org_golang_x_crypto//bcrypt:go_default_library",
    ],
)
